[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Objects/Bridge.gd" type="Script" id=1]
[ext_resource path="res://Art/Objects/PlatformsKindred.png" type="Texture" id=2]
[ext_resource path="res://Art/Objects/Morespriteskindred.png" type="Texture" id=3]
[ext_resource path="res://Art/Objects/Questionmark.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Objects/Spikes.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.3997, 2.71637 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 8 )

[sub_resource type="Animation" id=4]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Help:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Help:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 0.5, 1.1487 ),
"update": 0,
"values": [ Vector2( -5, -3 ), Vector2( -5, -23 ), Vector2( -5, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Help:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 2.82843, 4.75683 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 1.8, 1.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Help:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BridgeTrigger/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Bridge" type="Node2D"]

[node name="StaticTimer" type="Timer" parent="."]
one_shot = true

[node name="BridgeBody" type="KinematicBody2D" parent="."]
collision_layer = 64
collision_mask = 127
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BridgeBody"]
texture = ExtResource( 2 )
vframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="BridgeBody"]
shape = SubResource( 1 )

[node name="Spikes" type="Area2D" parent="BridgeBody"]
collision_layer = 64
collision_mask = 7
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BridgeBody/Spikes"]
position = Vector2( 0, 5.5 )
shape = SubResource( 2 )

[node name="BridgeTrigger" type="Area2D" parent="."]
position = Vector2( 64, -18 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BridgeTrigger"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="BridgeTrigger"]
position = Vector2( -2, 3 )
texture = ExtResource( 3 )
vframes = 3
hframes = 3

[node name="Help" type="Sprite" parent="BridgeTrigger/Sprite"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -5, -30 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BridgeTrigger/Sprite"]
anims/hide = SubResource( 4 )
anims/show_help = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FlipSwitch = SubResource( 6 )
[connection signal="timeout" from="StaticTimer" to="BridgeBody" method="_on_StaticTimer_timeout"]
[connection signal="body_entered" from="BridgeBody/Spikes" to="BridgeBody/Spikes" method="_on_Spikes_body_entered"]
[connection signal="body_entered" from="BridgeTrigger" to="BridgeBody" method="_on_BridgeTrigger_body_entered"]
[connection signal="body_exited" from="BridgeTrigger" to="BridgeBody" method="_on_BridgeTrigger_body_exited"]
